# narmax

./: .gitignore  .maketest  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md
src/: Collection.cpp  Collection.hpp  DataFrame.hpp  MIMOFrame.cpp  MIMOFrame.hpp  t_Collection.cpp  test.cpp
